--- a/src/SideBar/SideBar/sidebar.css
+++ b/src/SideBar/SideBar/sidebar.css
@@ -10,7 +10,8 @@
   position: sticky;
   top: 0;
   overflow-y: auto;
-  scrollbar-width: thin;
+  scrollbar-width: none;
+  
   scrollbar-color: #667eea #f1f1f1;
 }
 
